# shuttle-cch24

./: .env  .gitignore  Cargo.toml  build.rs
migrations/: 20241226151424_quotes.sql
src/: day0.rs  day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
