[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-manifest = "0.17.0"
itertools = "0.13.0"
mime = "0.3.17"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
toml = "0.8.19"
lazy_static = "1.5.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
grid = "0.15.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "macros", "uuid"] }
uuid = "1.11.0"
actix-files = "0.6.6"
tera = "1.20.0"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
ammonia = "4.0.0"
urlencoding = "2.1.3"
actix-multipart = "0.7.2"
futures = "0.3.31"

